<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/bg"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6F000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="-35dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="44sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputUserName"
                android:layout_width="322dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/contrail_one"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/contrail_one"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/inputUserName"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/inputUserName"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/contrail_one"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/inputEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputEmail"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />


            <EditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableLeft="@drawable/ic_baseline_security_24"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/contrail_one"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/inputPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="241dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_buttpn"
                android:fontFamily="@font/contrail_one"
                android:text="@string/btnregister"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/already_have_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/btnSignUp"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>