<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessNumber"
    android:background="@drawable/bg_guess"
    android:fontFamily="@font/nova_square"
    >


    <TextView
        android:id="@+id/score_guess_number"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="Score: 0"
        android:textColor="@color/p_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/level_guess_number"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/labelTop"
        android:layout_width="337dp"
        android:layout_height="83dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/nova_square"
        android:gravity="center"
        android:text="Guess Number Between 1-10"
        android:textColor="#cc181e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/guessNumberInput"
        android:layout_width="89dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/guess_bg"
        android:ems="10"
        android:fontFamily="@font/black_ops_one"
        android:gravity="center"
        android:hint="_ _"
        android:inputType="number"
        android:text=""
        android:textColor="#cc181e"
        android:textColorHint="#52d053"
        app:layout_constraintEnd_toEndOf="@+id/labelTop"
        app:layout_constraintStart_toStartOf="@+id/labelTop"
        app:layout_constraintTop_toBottomOf="@+id/labelTop" />


    <TextView
        android:id="@+id/guessHints"
        android:layout_width="306dp"
        android:layout_height="68dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nova_square"
        android:gravity="center"
        android:text=""
        android:textColor="#cc181e"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/remainGuessLabel"
        android:layout_width="131dp"
        android:layout_height="103dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_blurred"
        android:fontFamily="@font/nova_square"
        android:gravity="center"
        android:padding="5dp"
        android:text="Remain Guess: "
        android:textColor="#FF9800"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/guessHints"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guessHints"
        app:layout_constraintTop_toBottomOf="@+id/guessHints" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_bg"
        android:fontFamily="@font/russo_one"
        android:text="Reset Game"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/remainGuessLabel"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/remainGuessLabel"
        app:layout_constraintTop_toBottomOf="@+id/remainGuessLabel"
        app:layout_constraintVertical_bias="0.559" />

    <TextView
        android:id="@+id/level_guess_number"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="level: 1"
        android:textColor="@color/p_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_all_keybord"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="@+id/guessNumberInput"
        app:layout_constraintStart_toStartOf="@+id/guessNumberInput"
        app:layout_constraintTop_toBottomOf="@+id/guessNumberInput">

        <LinearLayout
            android:id="@+id/layout_numbers_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnZeroPress"
                android:text="@string/zero"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnOnePress"
                android:text="@string/one"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnTwoPress"
                android:text="@string/two"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnThreePress"
                android:text="@string/three"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnFourPress"
                android:text="@string/four"
                android:textColor="@color/p_red"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/layout_numbers_1"
            app:layout_constraintStart_toStartOf="@+id/layout_numbers_1"
            app:layout_constraintTop_toBottomOf="@+id/layout_numbers_1">


            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnFivePress"
                android:text="@string/five"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnSixPress"
                android:text="@string/six"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnSevenPress"
                android:text="@string/seven"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnEightPress"
                android:text="@string/eight"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_keybord"
                android:onClick="btnNinePress"
                android:text="@string/nine"
                android:textColor="@color/p_red"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/btnGuess"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_check_guess"
            android:fontFamily="@font/aclonica"
            android:padding="10dp"
            android:text="Check guess!"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:background="@drawable/btn_del"
            android:fontFamily="@font/aclonica"
            android:onClick="btnDeleteGuess"
            android:padding="10dp"
            android:text="Delete Guess"
            android:textColor="#e6770b"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>